# hackathon1-project1

./: .gitignore  IMPLEMENTATION_SUMMARY.md  agent_sdk_docs.md  vercel.json
backend/: README.md  agent.py  check_db.py  comprehensive_ingest.py  enhanced_ingest.py  fully_mock_agent.py  ingest.py  main.py  mock_agent.py  mock_retrieve.py  pyproject.toml  requirements.txt  retrieve.py  simple_ingest.py  test_api.py  test_backend.py
backend/api/: main.py  rag_service.py
frontend/: package.json
frontend_book/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontend_book/docs/: intro.md
history/: COMPLETION_SUMMARY.md  DEVELOPMENT_HISTORY.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN.md  SPEC2_IMPLEMENTATION_HISTORY.md  SPEC2_IMPLEMENTATION_LOG.md  SPEC2_PLAN.md  SPEC3_IMPLEMENTATION_HISTORY.md  SPEC3_IMPLEMENTATION_LOG.md  SPEC4_COMPLETE_HISTORY.md  SPEC4_IMPLEMENTATION_HISTORY.md  SPEC4_IMPLEMENTATION_LOG.md  TASKS_BREAKDOWN.md  TECHNICAL_SPECIFICATION.md  project-history.md  ui-upgrade-implementation-report.md
ingestion_pipeline/: .env.example  README.md  ingest.py  requirements.txt  test_embeddings.py  test_end_to_end.py  test_extraction.py  test_extraction_comprehensive.py  test_integration.py  test_qdrant.py
physical-ai-docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
specs/: RAG_CHATBOT_PLAN.md  RAG_CHATBOT_SPEC.md  RAG_CHATBOT_TASKS.md  SPEC2_RETRIEVAL_PIPELINE.md  SPEC2_TASKS.md  SPEC3_PLAN.md  SPEC3_RAG_AGENT.md  SPEC3_TASKS.md  SPEC4_BACKEND_FRONTEND_INTEGRATION.md  SPEC4_PLAN.md  SPEC4_TASKS.md
(+70 files in other folders)
