[project]
name = "book-rag-ingestion"
version = "0.1.0"
description = "Book content ingestion pipeline for RAG chatbot"
authors = [{name = "Developer", email = "developer@example.com"}]
requires-python = ">=3.8"

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "openai>=1.12.0",
    "qdrant-client>=1.9.1",
    "asyncio>=3.4.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]